# virtual-galaxy-bram-chris

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp  main.cpp
app/components/: object.hpp  transform.hpp
app/src/: app.cpp  app.hpp
app/src/components/: actor.hpp  bullet.hpp  camera.hpp  collider.hpp  destroy.hpp  object.hpp  player.hpp  scale.hpp  transform.hpp
app/src/pipelines/object/: axis.cpp  axis.hpp  collision.cpp  collision.hpp  rasterizer.cpp  rasterizer.hpp  wireframe.cpp  wireframe.hpp
app/src/systems/: collision.hpp  movement.cpp  movement.hpp  object-pipeline.cpp  object-pipeline.hpp  render.cpp  render.hpp  rendering-pipeline.cpp  rendering-pipeline.hpp  scaling.cpp  scaling.hpp  scene.cpp  scene.hpp  shooting.cpp  shooting.hpp  view.cpp  view.hpp
app/src/systems/graphics/: rasterizer.cpp  rasterizer.hpp  rasterizer2.cpp  rasterizer2.hpp  wireframe.cpp  wireframe.hpp
app/src/systems/rendering/: axis.cpp  axis.hpp  collision.cpp  collision.hpp  rasterizer.cpp  rasterizer.hpp  rendering.cpp  rendering.hpp  wireframe.cpp  wireframe.hpp
app/src/utils/: wavefront-object.cpp  wavefront-object.hpp
app/systems/: collision.cpp  collision.hpp  demo.cpp  demo.hpp  movement.cpp  movement.hpp  render.cpp  render.hpp  system.hpp
app/utils/: reader.cpp  reader.hpp
apps/: CMakeLists.txt
cmake/: default.cmake  definitions.cmake  ide.cmake
docs/: CMakeLists.txt
include/: base.hpp  platform.hpp
include/core/: application.hpp  data.hpp  system.hpp
include/graphics/: buffer.hpp  color.hpp  frame.hpp  renderer.hpp  texture.hpp
include/math/: axis.hpp  matrix4x4.hpp  utils.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/modern/: lib.hpp
include/utils/: color.hpp  data.hpp  input.hpp
src/: CMakeLists.txt
src/core/: application.cpp  data.cpp  input.cpp
src/graphics/: buffer.cpp  color.cpp  frame.cpp  renderer.cpp  texture.cpp
src/math/: matrix4x4.cpp  utils.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/utils/: color.cpp  data.cpp  input.cpp
tests/: CMakeLists.txt
tests/math/: matrix4x4_tests.cpp  vector2_tests.cpp  vector3_tests.cpp  vector4_tests.cpp
